# wayland-egl

./: .gitignore  CMakeLists.txt  README.md  my.fshader  my.vshader  tags
include/: gl_manager.h  wayland_manager.h
include/common/: Logger.h
src/: gl_manager.cpp  main.cpp  wayland_manager.cpp
